[package]
name = "eagle_eyes"
version = "0.1.0"
authors = ["Bijan Farahani <bijancfarahani@gmail.com>"]
edition = "2021"
rust-version = "1.79"


[dependencies]
# Used to create random letters for a round.
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"

# Used for image loading.
egui_extras = { version = "0.27.2", features = ["image"] }
image = { version = "0.24.9", features = ["png"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
